[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyheckle"
version = "0.1.0"
description = "Python bindings for the heckle meme case conversion library"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py38"]
module-name = "pyheckle"
